--- a/Make-all-the-faces-into-one-big-image.ipynb
+++ b/Make-all-the-faces-into-one-big-image.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Make all the faces into one big image\n",
     "\n",
-    "Having extracted lots and lots of faces from the Tribune photos, I thought I'd combine them in [one big image](https://easyzoom.com/image/127772)."
+    "Having extracted [lots and lots of faces](Finding-all-the-faces-in-the-Tribune-collection.ipynb) from the Tribune photos, I thought I'd combine them in [one big image](https://easyzoom.com/image/127772)."
    ]
   },
   {
@@ -18,6 +18,13 @@
     "from PIL import Image\n",
     "import os\n",
     "from tqdm import tqdm_notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One big image"
    ]
   },
   {
@@ -44,6 +51,53 @@
     "    else:\n",
     "        x += 50\n",
     "im.save('faces.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lots of big images for printing\n",
+    "\n",
+    "Creates A3/A4 sized images for easy printing. Perfect for a [pop-up exhibition](https://2018.exploringdigitalheritage.net/uncategorized/faces-of-the-tribune/)!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image dimensions and row length are determined by the number of images\n",
+    "# 595 x 842 pixels\n",
+    "# 3480 on A4 - 70 x 49\n",
+    "# 230,677 images\n",
+    "cols = 70\n",
+    "rows = 49\n",
+    "# cols = 16\n",
+    "# rows = 11\n",
+    "faces_per_page = cols * rows\n",
+    "number_of_pages = int(230677 / faces_per_page)\n",
+    "\n",
+    "faces = [f for f in os.listdir('faces') if f[-4:] == '.jpg']\n",
+    "for page in range(0, number_of_pages):\n",
+    "    y = 0\n",
+    "    x = 0\n",
+    "    im = Image.new('RGB', (cols*50, rows*50), 'white')\n",
+    "    start = page * faces_per_page\n",
+    "    for index, face in enumerate(tqdm_notebook(faces[start:start+faces_per_page]), start=1):\n",
+    "        face_img = Image.open(os.path.join('faces', face))\n",
+    "        face_img.thumbnail((50, 50))\n",
+    "        try:\n",
+    "            im.paste(face_img, (x, y, x+50, y+50))\n",
+    "        except ValueError:\n",
+    "            print(face)\n",
+    "        if (index % cols) == 0:\n",
+    "            x = 0\n",
+    "            y += 50\n",
+    "        else:\n",
+    "            x += 50\n",
+    "    im.save('faces-{}.jpg'.format(page))"
    ]
   }
  ],
