--- a/focus-on-faces.ipynb
+++ b/focus-on-faces.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Focus on faces\n",
     "\n",
-    "Selects an image at random from the Tribune collection in the State Library of NSW."
+    "Selects an image at random from the Tribune collection in the State Library of NSW.\n",
+    "\n",
+    "Run this in AppMode..."
    ]
   },
   {
@@ -86,7 +88,7 @@
     "            img_faces.paste(face, (x, y, x+w, y+h))\n",
     "        img_faces.save('fades/{}-start.jpg'.format(img_id))\n",
     "\n",
-    "      \n",
+    "\n",
     "def create_face_fade(img_id=None, min_faces=20):\n",
     "    '''\n",
     "    Generates a simple animated thing-y.\n",
@@ -111,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_face_fade()"
+    "create_face_fade(min_faces=100)"
    ]
   },
   {
