Remove unnecessary text

--- a/focus-on-faces.ipynb
+++ b/focus-on-faces.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Focus on faces\n",
     "\n",
-    "Selects an image at random from the Tribune collection in the State Library of NSW.\n",
-    "\n",
-    "Run this in AppMode..."
+    "Selects an image at random from the Tribune collection in the State Library of NSW."
    ]
   },
   {
@@ -17,6 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This notebook is intended to be run in Appmode...\n",
+    "\n",
     "import cv2\n",
     "import pandas as pd\n",
     "import os\n",
