Update to python3

--- a/Finding-faces-in-the-Tribune-collection.ipynb
+++ b/Finding-faces-in-the-Tribune-collection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing /Volumes/Workspace/mycode/glam-workbench/facial-detection/notebooks/FL4443995.jpg\n",
+      "I found 9 faces...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<image src=\"FL4443995.jpg\"><br><a target=\"_blank\" href=\"http://digital.sl.nsw.gov.au/delivery/DeliveryManagerServlet?dps_pid=FL4443995&embedded=true&toolbar=false\">More details at SLNSW</a><br><a target=\"_blank\" href=\"FL4443995-1.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-1.jpg\"></a><a target=\"_blank\" href=\"FL4443995-2.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-2.jpg\"></a><a target=\"_blank\" href=\"FL4443995-3.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-3.jpg\"></a><a target=\"_blank\" href=\"FL4443995-4.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-4.jpg\"></a><a target=\"_blank\" href=\"FL4443995-5.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-5.jpg\"></a><a target=\"_blank\" href=\"FL4443995-6.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-6.jpg\"></a><a target=\"_blank\" href=\"FL4443995-7.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-7.jpg\"></a><a target=\"_blank\" href=\"FL4443995-8.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-8.jpg\"></a><a target=\"_blank\" href=\"FL4443995-9.jpg\"><image style=\"width: 100px; height: 100px; float: left; margin: 10px; object-fit: scale-down;\" src=\"FL4443995-9.jpg\"></a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Provide a number as a parameter for more than 1 images\n",
     "get_random_image()"
@@ -177,9 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "get_image_by_id('FL4578163')"
@@ -209,9 +228,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
